[package]
name    = "oxide-http"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# napi-мост (N-API 8 baseline: один бинарник на Node 18+)
napi        = { version = "3", default-features = false, features = ["napi8"] }
napi-derive = "3"

# async-рантайм и HTTP-стек
tokio          = { version = "1", features = ["rt-multi-thread", "net", "macros", "sync"] }
hyper          = { version = "1", features = ["server", "http1", "http2"] }
hyper-util     = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes          = "1"

# роутинг + парсинг query
matchit         = "0.8"
form_urlencoded = "1"

# request-id (UUIDv7)
uuid = { version = "1", features = ["v7"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto       = true
strip     = "symbols"
opt-level = 3
