[package]
name    = "oxide-http"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# napi-мост (N-API 8 baseline: один бинарник на Node 18+)
# tokio_rt — рантайм napi для async-методов класса BodyIo (стрим-мост, M4).
napi        = { version = "3", default-features = false, features = ["napi8", "tokio_rt"] }
napi-derive = "3"

# async-рантайм и HTTP-стек
tokio          = { version = "1", features = ["rt-multi-thread", "net", "macros", "sync"] }
hyper          = { version = "1", features = ["server", "http1", "http2"] }
hyper-util     = { version = "0.1", features = ["http1", "http2", "server-auto", "server-graceful", "tokio"] }
http-body-util = "0.1"
bytes          = "1"

# роутинг + парсинг query
matchit         = "0.8"
form_urlencoded = "1"

# request-id (UUIDv7)
uuid = { version = "1", features = ["v7"] }
jsonschema = { version = "0.46", default-features = false }
serde_json = "1.0.150"
multer = "3.1.0"
futures-util = { version = "0.3.32", default-features = false }
# TLS: провайдер ring (портируемее aws-lc-rs для musl/кросс-сборок M13)
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "tls12", "ring"] }
rustls-pemfile = "2"

[build-dependencies]
napi-build = "2"

[profile.release]
lto       = true
strip     = "symbols"
opt-level = 3
