[package]
name    = "oxide-http"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# napi bridge (N-API 8 baseline: one binary for Node 18+)
# tokio_rt — napi's runtime for the async methods of BodyIo (the streaming bridge, M4).
napi        = { version = "3", default-features = false, features = ["napi8", "tokio_rt"] }
napi-derive = "3"

# async runtime and HTTP stack
tokio          = { version = "1", features = ["rt-multi-thread", "net", "macros", "sync", "io-util", "time"] }
# client — only for app.inject(): the request travels over an in-memory pipe (M12)
hyper          = { version = "1", features = ["server", "client", "http1", "http2"] }
hyper-util     = { version = "0.1", features = ["http1", "http2", "server-auto", "server-graceful", "tokio"] }
http-body-util = "0.1"
bytes          = "1"
# socket options: backlog, SO_REUSEPORT (§6c B9)
# the "all" feature is required for set_reuse_port (socket2 gates it behind that flag)
socket2        = { version = "0.5", features = ["all"] }

# routing + query parsing
matchit         = "0.8"
form_urlencoded = "1"

# request-id (UUIDv7)
uuid = { version = "1", features = ["v7"] }
jsonschema = { version = "0.46", default-features = false }
serde_json = "1.0.150"
multer = "3.1.0"
futures-util = { version = "0.3.32", default-features = false }
# TLS: the ring provider (more portable than aws-lc-rs for musl/cross builds, M13)
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "tls12", "ring"] }
rustls-pemfile = "2"
# request body decompression, so native schema validation can see a compressed payload
# (§6b). Both are pure Rust: the musl/cross builds stay dependency-free, same reasoning
# as picking ring over aws-lc-rs above.
flate2 = { version = "1.1.9", default-features = false, features = ["rust_backend"] }
brotli = { version = "8.0.4", default-features = false, features = ["std"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto       = true
strip     = "symbols"
opt-level = 3
